[gd_scene load_steps=4 format=3 uid="uid://dyt45pvhi04an"]

[ext_resource type="Theme" uid="uid://b48w54vf670uy" path="res://addons/oasis_dialogue/branch/branch_theme.tres" id="1_oxoiw"]
[ext_resource type="StyleBox" uid="uid://bc3exjdlkea78" path="res://addons/oasis_dialogue/branch/titlebar_invalid_stylebox.tres" id="2_6hn2x"]
[ext_resource type="Script" uid="uid://cfpmjd8eo8f6o" path="res://addons/oasis_dialogue/branch/branch.gd" id="2_darse"]

[node name="Branch" type="GraphNode"]
custom_minimum_size = Vector2(320, 0)
offset_right = 320.0
offset_bottom = 68.0
theme = ExtResource("1_oxoiw")
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
script = ExtResource("2_darse")
_invalid_style = ExtResource("2_6hn2x")

[node name="ParserTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="CodeEdit" type="CodeEdit" parent="."]
layout_mode = 2
scroll_fit_content_height = true
scroll_fit_content_width = true
auto_brace_completion_enabled = true
auto_brace_completion_pairs = {
"{": "}"
}

[connection signal="node_deselected" from="." to="." method="_on_node_deselected"]
[connection signal="node_selected" from="." to="." method="_on_node_selected"]
[connection signal="timeout" from="ParserTimer" to="." method="_on_parser_timer_timeout"]
[connection signal="text_changed" from="CodeEdit" to="." method="_on_code_edit_text_changed"]
